style.css
/* Poppins font */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
/* font-family: 'Poppins', sans-serif; */

*{
	margin: 0;
	padding: 0;
	font-family: 'Poppins', sans-serif;
}
body{
	background-color: #0F0F10;
	padding: 0px 150px;
}
.home-page{

}

/* START -> header section of home-page */
nav{
	/* border: 2px solid red; */
	padding: 30px 0px;
}
.left-nav{
	/* border: 2px solid green; */
}
.beats-logo{
	/* border: 2px solid violet; */
	width: 50px;
	height: 50px;
	cursor: pointer;
	border-radius: 60%;
}
.right-nav{
	/* border: 2px solid blue; */
	float: right;
}
.link{
	/* border: 2px solid yellow; */
	padding: 5px 20px;
	color: #ffffff;
	text-decoration: none;
	letter-spacing: 1px;
	font-weight: 500;
}
.shop-btn{
	padding: 10px 40px;
	margin-left: 20px;
	background-color: #1E1E21;
	border: none;
	font-family: 'Poopins' sans-serif;
	font-weight: 400;
	color: #ffffff;
	letter-spacing: 2px ;
	box-shadow: -1px -1px 0px #c3b9b9;
	border-radius: 10px;
	cursor: pointer;
}
/* hover effect on nav link */
a:hover {
	display: inline-block;
	transform: scale(1.1);
	text-shadow: 1px 1px 3px #ffff00;
}
/* hover effect on shop-btn */
.shop-btn:hover{
	background-color: #c3b9b9;
	color: black;
	font-weight: 600;
	transition: background-color 0.5s;
}
/* hover effect on beats-logo */
.beats-logo:hover{
	transform: scale(1.2);
	background-color: #ff00d9;
}
/* END -> header section of home-page */

/* ******************************************************************************* */

/* START -> main section of home-page */
.main-section-index{
	display: flex;
	gap: 200px;
	margin-bottom: 50px;
}
.left-main{
	margin-top: -200px;
	margin-left: 80px;
}
.left-main img{
	width: 230px;
	height: 538px;
	filter: drop-shadow(1px 1px 10px black) drop-shadow(-1px -1px 10px #ff00d9);
}
.right-main{
	display: flex;
	flex-direction: column;
	width: 100%;
	height: fit-content;
}
.right-main-1{
	align-self: center;
}
.right-main-1 img{
	width: 320px;
	height: 70px;
}
.right-main-2{	
}
.right-main-2 h2{
	color: #ffffff;
	font-size: 46px;
	font-weight: 600;
}
.right-main-2 h5{
	padding: 20px 0px 20px 0px;
	color: #ffffff;
	font-size: 16px;
	font-weight: 400;
}
.right-main-2 p{
	font-size: 12px;
	color: #BDC0C2;
	width: 300px;
	line-height: 25px;
	font-weight: 200;
}
.add-to-bag-btn{
	margin-top: 20px;
	display: flex;
	background-color: #1E1E21;
	color: #ffffff;
	padding: 8px 25px;
	gap: 15px;
	border-radius: 10px;
	border: none;
	cursor: pointer;
	align-items: center;
}
.add-to-bag-btn img{
	width: 15px;
	height: 16.5px;
}
#text-1{
	font-size: 12px;
	color: #ffffff;
	width: fit-content;
}
#text-2{
	font-size: 16px;
	color: #ffffff;
	font-weight: 300;
	width: fit-content;
}
/* END -> main section of home-page */

/* ******************************************************************** */

/* START -> footer section of home-page */
.footer-main{
	display: grid;
	width: 100%;
	grid-template-columns: auto auto auto auto;
	justify-content: center;
	align-items: center;
	
}
.footer-main a{
	display: inline;
	width: fit-content;
}

